# clubrugby-data

./: .gitignore  clubs.json  fixtures.json  generate_sample_data.py  leagues.json  main.py  pyproject.toml  qc.py  rseq.py  standings.json  test.py
