[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clubrugby-data"
version = "0.1.0"
description = "Canadian club rugby union data scraper"
requires-python = ">=3.9"
dependencies = ["requests>=2.28.0", "ics>=0.8.0"]

[project.scripts]
clubrugby-scraper = "main:main"

[tool.setuptools]
py-modules = ["main", "rseq"]